# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: test-lint.yml
page_analyzer/: app.py  db.py  seo.py  url_validator.py
page_analyzer/templates/: index.html  template.html  url.html  url_table.html
